--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@ body {
 
 .main-image {
     max-width: 100%;
+    border-radius: 20%;
 }
 
 .pet-image {
+    border-radius: 50%;
     width: 30px;
     height: 30px;
 }
